--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,7 +26,10 @@ jobs:
         run: |
           npm install
           npm run build
-      - uses: actions/upload-artifact@main
+      - uses: actions/upload-artifact@master
+        with:
+          name: webpack artifacts
+          path: public/
         with:
           name: webpack artifacts
           path: public/
